# IntroCD

./: .gitignore  README.md  pyproject.toml
Tarea_1/: 2026_template_tarea1.ipynb  report.html
Tarea_1/informe/: Informe.tex
Tarea_2/: 2026_template_tarea2.ipynb
Tarea_2/informe/: Informe.tex
