[project]
name = "intro-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "fg-data-profiling>=4.19.1",
    "jupyter>=1.1.1",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "pandas<3.0.0",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<82",
    "ydata-profiling>=4.18.4",
]
